--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,27 @@
+---
+import Navbar from "../components/globals/Navbar.astro";
+import Footer from "../components/globals/Footer.astro";
+
+import '../styles/globals.css';
+
+const { title } = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/cici-mandarin.svg" />
+
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title} - Cici Mandarin: Your All-in-One Gateway to China, Study, Travel, & Work</title>
 	</head>
-	<body>
+	<body class="w-screen h-screen">
+		<Navbar />
+
 		<slot />
+		
+		<!-- <Footer /> -->
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
