--- a/src/components/globals/Navbar.astro
+++ b/src/components/globals/Navbar.astro
@@ -51,52 +51,47 @@ const CurrentPath = Astro.url.pathname;
 			class="bg-white/95 backdrop-blur rounded-b-2xl shadow-xl w-[440px] max-w-[60vw]"
 		>
 			<div class="grid grid-cols-2 sm:grid-cols-4 place-items-center">
-				<div
-					class="flex flex-col items-center cursor-pointer hover:bg-gray-50 gap-2 text-center border-r border-gray-200 last:border-r-0 px-4 py-5"
+				<a
+					href="/services/cici-language-course-expert"
+					class="group flex flex-col items-center cursor-pointer hover:bg-gray-50 gap-2 text-center border-r border-gray-200 last:border-r-0 px-4 py-5"
 				>
 					<img
 						class="w-14 h-14 object-contain"
 						src="/navbar/s-1.svg"
 						alt="Cici Language Course Expert"
 					/>
-					<a href="/services/cici-language-course-expert" class="text-[#cb0d0d] text-xs hover:underline"
-						>Cici Language Course Expert</a
-					>
-				</div>
-				<div
-					class="flex flex-col items-center cursor-pointer hover:bg-gray-50 gap-2 text-center border-r border-gray-200 last:border-r-0 px-4 py-5"
+					<span class="text-[#cb0d0d] text-xs group-hover:underline">Cici Language Course Expert</span>
+				</a>
+				<a
+					href="/services/cici-study-abroad-expert"
+					class="group flex flex-col items-center cursor-pointer hover:bg-gray-50 gap-2 text-center border-r border-gray-200 last:border-r-0 px-4 py-5"
 				>
 					<img
 						class="w-14 h-14 object-contain"
 						src="/navbar/s-2.svg"
 						alt="Cici Study Abroad Expert"
 					/>
-					<a href="/services/cici-study-abroad-expert" class="text-[#cb0d0d] text-xs hover:underline"
-						>Cici Study Abroad Expert</a
-					>
-				</div>
-				<div
-					class="flex flex-col items-center cursor-pointer hover:bg-gray-50 gap-2 text-center border-r border-gray-200 last:border-r-0 px-4 py-5"
+					<span class="text-[#cb0d0d] text-xs group-hover:underline">Cici Study Abroad Expert</span>
+				</a>
+				<a
+					href="/services/cici-tour-travel-expert"
+					class="group flex flex-col items-center cursor-pointer hover:bg-gray-50 gap-2 text-center border-r border-gray-200 last:border-r-0 px-4 py-5"
 				>
 					<img
 						class="w-14 h-14 object-contain"
 						src="/navbar/s-3.svg"
 						alt="Cici Tour Travel Expert"
 					/>
-					<a href="/services/cici-tour-travel-expert" class="text-[#cb0d0d] text-xs hover:underline"
-						>Cici Tour Travel Expert</a
-					>
-				</div>
-				<div class="flex flex-col items-center cursor-pointer hover:bg-gray-50 gap-2 text-center px-4 py-5">
+					<span class="text-[#cb0d0d] text-xs group-hover:underline">Cici Tour Travel Expert</span>
+				</a>
+				<a href="/services/cici-career-link-expert" class="group flex flex-col items-center cursor-pointer hover:bg-gray-50 gap-2 text-center px-4 py-5">
 					<img
 						class="w-14 h-14 object-contain"
 						src="/navbar/s-4.svg"
 						alt="Cici Career Link Expert"
 					/>
-					<a href="/services/cici-career-link-expert" class="text-[#cb0d0d] text-xs hover:underline"
-						>Cici Career Link Expert</a
-					>
-				</div>
+					<span class="text-[#cb0d0d] text-xs group-hover:underline">Cici Career Link Expert</span>
+				</a>
 			</div>
 		</div>
 	</div>
