--- a/src/components/globals/Footer.astro
+++ b/src/components/globals/Footer.astro
@@ -1,24 +1,38 @@
 ---
-const currentYear = new Date().getFullYear();
+
+const FooterBackground = "/footer/footer-bg.svg";
+const currentPath = Astro.url.pathname;
+
 ---
-
-<footer class="bg-[#ac1234] text-white font-sora">
-	<div class="border-t border-white/50">
-		<div class="container mx-auto py-5 md:py-3 px-6 2xl:px-28">
-			<div
-				class="flex flex-wrap items-center justify-center text-center lg:justify-between lg:text-left gap-y-2 md:gap-y-4"
-			>
-				<div>
-					<a href="/" class="inline-block w-40 -mb-1">
-						<img src="/logo-light.svg" alt="Logo STIE Pancasetia" />
-					</a>
-				</div>
-
-				<div>
-					<p class="text-[13px] text-gray-300">
-						STIE Pancasetia ©{currentYear}. All rights reserved
-					</p>
-				</div>
+<footer class="w-full text-white relative overflow-hidden">
+	<img src={FooterBackground} alt="Footer Background" class="w-full h-auto block" />
+	<div class="absolute inset-0 justify-center items-center flex">
+		<div class="w-md h-24 -mt-7">
+			<div class="w-full h-2/3 flex justify-center items-center gap-4">
+				<a href="/">
+					<img src="/footer/web.svg" alt="Web" class="w-12 h-12">
+				</a>
+				<a href="https://www.instagram.com/cicimandarin.idn">
+					<img src="/footer/ig.svg" alt="Instagram" class="w-12 h-12">
+				</a>
+				<a href="https://wa.me/+6287853909383">
+					<img src="/footer/wa.svg" alt="WhatsApp" class="w-12 h-12">
+				</a>
+				<a href="https://tiktok.com/@cicimandarin.idn">
+					<img src="/footer/tiktok.svg" alt="TikTok" class="w-12 h-12">
+				</a>
+				<a href="https://www.linkedin.com/company/cicimandarin.idn">
+					<img src="/footer/linked-in.svg" alt="LinkedIn" class="w-12 h-12">
+				</a>
+				<a href="mailto:info@cicimandarin.idn">
+					<img src="/footer/mail.svg" alt="Mail" class="w-12 h-12">
+				</a>
+			</div>
+			<div class="w-full font-bold text-md h-1/3 flex justify-center items-center gap-6">
+				<a href="/" class=`hover:underline hover:text-yellow-300`>HOME</a>
+				<a href="/about-us" class=`hover:underline hover:text-yellow-300`>ABOUT US</a>
+				<a href="/services/cici-language-course-expert" class=`hover:underline hover:text-yellow-300`>SERVICES</a>
+				<a href="/contact-us" class=`hover:underline hover:text-yellow-300`>CONTACT US</a>
 			</div>
 		</div>
 	</div>
