Update Footer component links for TikTok and LinkedIn
- Corrected the TikTok link to include the full URL format.
- Updated the LinkedIn link to reflect the correct company name format.

--- a/src/components/globals/Footer.astro
+++ b/src/components/globals/Footer.astro
@@ -18,10 +18,10 @@ const currentPath = Astro.url.pathname;
 				<a href="https://wa.me/+6287853909383">
 					<img src="/footer/wa.svg" alt="WhatsApp" class="w-12 h-12">
 				</a>
-				<a href="https://tiktok.com/@cicimandarin.idn">
+				<a href="https://www.tiktok.com/@cicimandarin.idn">
 					<img src="/footer/tiktok.svg" alt="TikTok" class="w-12 h-12">
 				</a>
-				<a href="https://www.linkedin.com/company/cicimandarin.idn">
+				<a href="https://www.linkedin.com/company/cici-mandarin-idn">
 					<img src="/footer/linked-in.svg" alt="LinkedIn" class="w-12 h-12">
 				</a>
 				<a href="mailto:info@cicimandarin.idn">
