Add Hero and Who components to Cici Language Course Expert page

--- a/src/pages/services/cici-language-course-expert.astro
+++ b/src/pages/services/cici-language-course-expert.astro
@@ -1,6 +1,10 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Hero from "../../components/pages/services/cici-language-course-expert/Hero.astro";
+import Who from "../../components/pages/services/cici-language-course-expert/Who.astro";
 ---
 
 <Layout title="Cici Language Course Expert">
+    <Hero />
+    <Who />
 </Layout>
