--- a/src/components/pages/services/cici-language-course-expert/Hero.astro
+++ b/src/components/pages/services/cici-language-course-expert/Hero.astro
@@ -8,26 +8,29 @@ const scrollImage = "/services/cici-language-course-expert/scroll-paper.svg";
   style={`background-image:url(${backgroundImage}); background-size:cover; background-position:right center; background-repeat:no-repeat;`}
 >
   <div class="mx-auto max-w-7xl px-6 py-16 md:py-24 flex flex-col items-end justify-center min-h-[70vh]">
-    <div class="w-full max-w-[880px]">
-      <h1 class="text-center font-mochiy-pop-one text-5xl leading-relaxed text-outline-red">
+    <div class="relative w-full max-w-[880px] pt-20 transform translate-x-16 mt-16">
+      
+      <h1 class="absolute top-12 left-1/2 -translate-x-1/2 z-10 w-full text-center font-mochiy-pop-one text-4xl leading-relaxed text-outline-red">
         CICI LANGUAGE
         <br class="hidden sm:block" />
         COURSE EXPERT
       </h1>
-    </div>
-    <div class="relative w-full max-w-[880px] ml-auto">
-      <img src={scrollImage} alt="Scroll Paper" class="block mx-auto w-[90%] h-auto select-none pointer-events-none" />
+      
+      <div class="relative w-full">
+        <img src={scrollImage} alt="Scroll Paper" class="block mx-auto w-[80%] h-auto select-none pointer-events-none" />
 
-      <div class="absolute inset-0 flex items-center justify-center px-10 sm:px-12 md:px-16 mx-40">
-        <div class="text-center bg-white/0">
-          <h2 class="text-[#cb0d0d] font-bold text-sm sm:text-base md:text-lg">Master Mandarin with Us:</h2>
-          <h3 class="text-[#cb0d0d] font-bold text-sm sm:text-base md:text-lg -mt-1">Your All-in-One Chinese Language Solution</h3>
-          <p class="mt-3 text-[12px] sm:text-sm md:text-base text-[#cb0d0d] leading-relaxed">
-            At Cici Mandarin, we offer Chinese courses for all ages and levels, guided by local and
-            native teachers to help you learn Mandarin in a way that suits your life and goals.
-          </p>
+        <div class="absolute inset-0 flex items-center justify-center px-10 sm:px-12 md:px-16 mx-40">
+          <div class="text-center bg-white/0">
+            <h2 class="text-[#cb0d0d] font-bold text-sm sm:text-base md:text-lg">Master Mandarin with Us:</h2>
+            <h3 class="text-[#cb0d0d] font-bold text-sm sm:text-base md:text-lg -mt-1">Your All-in-One Chinese Language Solution</h3>
+            <p class="mt-3 text-[12px] sm:text-sm md:text-base text-[#cb0d0d] leading-relaxed">
+              At Cici Mandarin, we offer Chinese courses for all ages and levels, guided by local and
+              native teachers to help you learn Mandarin in a way that suits your life and goals.
+            </p>
+          </div>
         </div>
       </div>
+
     </div>
   </div>
 </section>
