--- a/src/components/pages/services/cici-language-course-expert/Who.astro
+++ b/src/components/pages/services/cici-language-course-expert/Who.astro
@@ -13,30 +13,30 @@ const adults = "/services/cici-language-course-expert/adults.svg";
 ---
 
 <section 
-  class="relative w-full h-screen"
-  style={`background-image:url(${background}); background-size:cover; background-position:right center; background-repeat:no-repeat;`}
+  class="relative w-full h-screen bg-cover bg-right bg-no-repeat overflow-hidden -mt-16"
+  style={`background-image: url(${background});`}
 >
-  <div class="container mx-auto max-w-7xl">
-    <h2 class="mb-10 text-center text-4xl font-bold tracking-wider text-white drop-shadow-lg md:text-5xl font-mochiy-pop-one">
+  <div class="container mx-auto max-w-7xl pt-20">
+    <h2 class="mb-16 text-center text-4xl font-bold text-white drop-shadow-lg font-mochiy-pop-one">
       WHO CAN JOIN US?
     </h2>
     
-    <div class="relative mx-auto min-h-[500px] w-full max-w-6xl">
-      <div class="absolute bottom-20 left-1/2 flex w-[90%] max-w-4xl -translate-x-1/2 items-end gap-6 md:gap-8">
-        <div class="flex flex-1 flex-col items-center gap-2">
+    <div class="relative mx-auto min-h-[500px] max-w-6xl">
+      <div class="absolute bottom-0 left-1/2 flex w-[90%] max-w-4xl -translate-x-1/2 items-end gap-6 md:gap-8">
+        <div class="flex flex-1 flex-col items-center">
           <img 
             src={preschool} 
-            alt="Preschooler" 
-            class="h-auto w-full"
+            alt="Preschool" 
+            class="h-auto w-full scale-125"
           />
           <img 
             src={people1} 
-            alt="Preschooler" 
-            class="h-auto w-full max-w-[120px] drop-shadow-lg md:max-w-[140px]"
+            alt="Preschool" 
+            class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6"
           />
         </div>
         
-        <div class="flex flex-1 flex-col items-center gap-2">
+        <div class="flex flex-1 flex-col items-center">
           <img 
             src={kids} 
             alt="Kid" 
@@ -45,24 +45,24 @@ const adults = "/services/cici-language-course-expert/adults.svg";
           <img 
             src={people2} 
             alt="Kid" 
-            class="h-auto w-full max-w-[120px] drop-shadow-lg md:max-w-[140px]"
+            class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6"
           />
         </div>
         
-        <div class="relative flex flex-1 flex-col items-center gap-2">
+        <div class="relative flex flex-1 flex-col items-center">
           <img 
             src={teens} 
             alt="Teen" 
-            class="h-auto w-full"
+            class="h-auto w-full scale-90"
           />
           <img 
             src={people3} 
             alt="Teen" 
-            class="h-auto w-full max-w-[140px] drop-shadow-lg md:max-w-40"
+            class="h-auto w-full max-w-[140px] -mt-4 drop-shadow-lg md:max-w-40 md:-mt-6"
           />
         </div>
         
-        <div class="flex flex-1 flex-col items-center gap-2">
+        <div class="flex flex-1 flex-col items-center scale-90">
           <img 
             src={adults} 
             alt="Adult" 
@@ -71,20 +71,20 @@ const adults = "/services/cici-language-course-expert/adults.svg";
           <img 
             src={people4} 
             alt="Adult" 
-            class="h-auto w-full max-w-[120px] drop-shadow-lg md:max-w-[140px]"
+            class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6"
           />
         </div>
         
-        <div class="flex flex-1 flex-col items-center gap-2">
+        <div class="flex flex-1 flex-col items-center">
           <img 
             src={companies} 
             alt="Company" 
-            class="h-auto w-full"
+            class="h-auto w-full scale-110"
           />
           <img 
             src={people5} 
             alt="Company" 
-            class="h-auto w-full max-w-[120px] drop-shadow-lg md:max-w-[140px]"
+            class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6"
           />
         </div>
       </div>
