--- a/src/components/pages/services/cici-language-course-expert/Hero.astro
+++ b/src/components/pages/services/cici-language-course-expert/Hero.astro
@@ -1,10 +1,10 @@
 ---
-const backgroundImage = "/services/cici-language-course-expert/background.webp";
-const scrollImage = "/services/cici-language-course-expert/scroll-paper.svg";
+const backgroundImage = "/services/cici-language-course-expert/Hero/background.webp";
+const scrollImage = "/services/cici-language-course-expert/Hero/scroll-paper.svg";
 ---
 
 <section class="relative w-full h-screen bg-cover bg-center bg-no-repeat z-20" style={`background-image: url(${backgroundImage});`}>
-  <div class="absolute inset-x-0 bottom-0 h-32 bg-gradient-to-t from-black/30 to-transparent pointer-events-none z-10"></div>
+  <div class="absolute inset-x-0 bottom-0 h-32 bg-linear-to-t from-black/30 to-transparent pointer-events-none z-10"></div>
 
   <div class="mx-auto max-w-7xl px-6 py-16 md:py-24 flex flex-col items-end justify-center min-h-[70vh] relative z-20">
     <div class="relative w-full max-w-[880px] pt-20 transform translate-x-16 mt-16">
