Refactor Who component for improved code readability and structure

--- a/src/components/pages/services/cici-language-course-expert/Who.astro
+++ b/src/components/pages/services/cici-language-course-expert/Who.astro
@@ -1,91 +1,46 @@
 ---
-const background = "/services/cici-language-course-expert/class.webp";
-const people1 = "/services/cici-language-course-expert/people1.svg";
-const people2 = "/services/cici-language-course-expert/people2.svg";
-const people3 = "/services/cici-language-course-expert/people3.svg";
-const people4 = "/services/cici-language-course-expert/people4.svg";
-const people5 = "/services/cici-language-course-expert/people5.svg";
-const companies = "/services/cici-language-course-expert/companies.svg";
-const teens = "/services/cici-language-course-expert/teens.svg";
-const preschool = "/services/cici-language-course-expert/preschool.svg";
-const kids = "/services/cici-language-course-expert/kids.svg";
-const adults = "/services/cici-language-course-expert/adults.svg";
+const background = "/services/cici-language-course-expert/Who/class.webp";
+const people1 = "/services/cici-language-course-expert/Who/people1.svg";
+const people2 = "/services/cici-language-course-expert/Who/people2.svg";
+const people3 = "/services/cici-language-course-expert/Who/people3.svg";
+const people4 = "/services/cici-language-course-expert/Who/people4.svg";
+const people5 = "/services/cici-language-course-expert/Who/people5.svg";
+const companies = "/services/cici-language-course-expert/Who/companies.svg";
+const teens = "/services/cici-language-course-expert/Who/teens.svg";
+const preschool = "/services/cici-language-course-expert/Who/preschool.svg";
+const kids = "/services/cici-language-course-expert/Who/kids.svg";
+const adults = "/services/cici-language-course-expert/Who/adults.svg";
 ---
 
-<section 
-  class="relative w-full h-screen bg-cover bg-right bg-no-repeat overflow-hidden -mt-16"
-  style={`background-image: url(${background});`}
->
+<section class="relative w-full h-screen bg-cover bg-right bg-no-repeat overflow-hidden -mt-16" style={`background-image: url(${background});`}>
   <div class="container mx-auto max-w-7xl pt-20">
-    <h2 class="mb-16 text-center text-4xl font-bold text-white drop-shadow-lg font-mochiy-pop-one">
-      WHO CAN JOIN US?
-    </h2>
-    
+    <h2 class="mb-16 text-center text-4xl font-bold text-white drop-shadow-lg font-mochiy-pop-one">WHO CAN JOIN US?</h2>
+
     <div class="relative mx-auto min-h-[500px] max-w-6xl">
       <div class="absolute bottom-0 left-1/2 flex w-[90%] max-w-4xl -translate-x-1/2 items-end gap-6 md:gap-8">
         <div class="flex flex-1 flex-col items-center">
-          <img 
-            src={preschool} 
-            alt="Preschool" 
-            class="h-auto w-full scale-125"
-          />
-          <img 
-            src={people1} 
-            alt="Preschool" 
-            class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6"
-          />
+          <img src={preschool} alt="Preschool" class="h-auto w-full scale-125" />
+          <img src={people1} alt="Preschool" class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6" />
         </div>
-        
+
         <div class="flex flex-1 flex-col items-center">
-          <img 
-            src={kids} 
-            alt="Kid" 
-            class="h-auto w-full"
-          />
-          <img 
-            src={people2} 
-            alt="Kid" 
-            class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6"
-          />
+          <img src={kids} alt="Kid" class="h-auto w-full" />
+          <img src={people2} alt="Kid" class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6" />
         </div>
-        
+
         <div class="relative flex flex-1 flex-col items-center">
-          <img 
-            src={teens} 
-            alt="Teen" 
-            class="h-auto w-full scale-90"
-          />
-          <img 
-            src={people3} 
-            alt="Teen" 
-            class="h-auto w-full max-w-[140px] -mt-4 drop-shadow-lg md:max-w-40 md:-mt-6"
-          />
+          <img src={teens} alt="Teen" class="h-auto w-full scale-90" />
+          <img src={people3} alt="Teen" class="h-auto w-full max-w-[140px] -mt-4 drop-shadow-lg md:max-w-40 md:-mt-6" />
         </div>
-        
+
         <div class="flex flex-1 flex-col items-center scale-90">
-          <img 
-            src={adults} 
-            alt="Adult" 
-            class="h-auto w-full"
-          />
-          <img 
-            src={people4} 
-            alt="Adult" 
-            class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6"
-          />
+          <img src={adults} alt="Adult" class="h-auto w-full" />
+          <img src={people4} alt="Adult" class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6" />
         </div>
-        
+
         <div class="flex flex-1 flex-col items-center">
-          <img 
-            src={companies} 
-            alt="Company" 
-            class="h-auto w-full scale-110"
-          />
-          <img 
-            src={people5} 
-            alt="Company" 
-            class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6"
-          />
+          <img src={companies} alt="Company" class="h-auto w-full scale-110" />
+          <img src={people5} alt="Company" class="h-auto w-full max-w-[120px] -mt-4 drop-shadow-lg md:max-w-[140px] md:-mt-6" />
         </div>
       </div>
     </div>
