--- a/src/pages/services/cici-language-course-expert.astro
+++ b/src/pages/services/cici-language-course-expert.astro
@@ -2,9 +2,11 @@
 import Layout from "../../layouts/Layout.astro";
 import Hero from "../../components/pages/services/cici-language-course-expert/Hero.astro";
 import Who from "../../components/pages/services/cici-language-course-expert/Who.astro";
+import Goals from "../../components/pages/services/cici-language-course-expert/Goals.astro";
 ---
 
 <Layout title="Cici Language Course Expert">
     <Hero />
     <Who />
+    <Goals />
 </Layout>
