🔥feat: Add landing pages for Additional Pro Services, Our Service, Welcome, and Why Us

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Welcome from "../components/pages/landing-pages/Welcome.astro";
+import OurService from "../components/pages/landing-pages/OurService.astro";
+import AddItionalProServices from "../components/pages/landing-pages/AdditionalProServices.astro";
+import WhyUs from "../components/pages/landing-pages/WhyUs.astro";
 ---
 
 <Layout title="Home">
+    <Welcome />
+    <OurService />
+    <AddItionalProServices />
+    <WhyUs />
 </Layout>
