--- a/src/components/pages/services/cici-language-course-expert/Goals.astro
+++ b/src/components/pages/services/cici-language-course-expert/Goals.astro
@@ -1,8 +1,45 @@
 ---
-const background = "/services/cici-language-course-expert/Goals/background.webp"
+const background = "/services/cici-language-course-expert/goals/background.webp";
+const icon1 = "/services/cici-language-course-expert/goals/Group.svg";
+const icon2 = "/services/cici-language-course-expert/goals/Group-1.svg";
+const icon3 = "/services/cici-language-course-expert/goals/Group-2.svg";
+const icon4 = "/services/cici-language-course-expert/goals/Group-3.svg";
+const icon5 = "/services/cici-language-course-expert/goals/Group-4.svg";
 ---
 
 <section class="relative w-full h-screen bg-cover bg-right bg-no-repeat overflow-hidden -mt-16" style={`background-image: url(${background});`}>
+  <div class="container mx-auto max-w-7xl pt-20 h-full flex flex-col items-start justify-start">
+    <div class="ml-68 mt-10">
+      <h2 class="text-6xl font-bold drop-shadow-lg font-mochiy-pop-one text-outline-red">GOALS</h2>
+    </div>
 
+    <div class="absolute right-20 top-46 max-w-xl pr-8">
+      <div class="space-y-6 transform rotate-2 mr-24">
+        <div class="flex items-start gap-4">
+          <img src={icon5} alt="Icon" class="h-auto w-16 shrink-0" />
+          <p class="text-[#cb0d0d] font-medium text-lg pt-3">Fun, interactive lessons to build strong Mandarin basics</p>
+        </div>
 
+        <div class="flex items-start gap-4">
+          <img src={icon4} alt="Icon" class="h-auto w-16 shrink-0" />
+          <p class="text-[#cb0d0d] font-medium text-lg pt-3">Prepare for school exams and future studies in China</p>
+        </div>
+
+        <div class="flex items-start gap-4">
+          <img src={icon1} alt="Icon" class="h-auto w-16 shrink-0" />
+          <p class="text-[#cb0d0d] font-medium text-lg pt-3">Career advancement, business communication, or personal growth</p>
+        </div>
+
+        <div class="flex items-start gap-4">
+          <img src={icon2} alt="Icon" class="h-auto w-16 shrink-0" />
+          <p class="text-[#cb0d0d] font-medium text-lg pt-3">Progress reports and certifications</p>
+        </div>
+
+        <div class="flex items-start gap-4">
+          <img src={icon3} alt="Icon" class="h-auto w-16 shrink-0" />
+          <p class="text-[#cb0d0d] font-medium text-lg pt-3">Customized programs to enhance Mandarin skills</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
