Add Programs component to Cici Language Course Expert page

--- a/src/pages/services/cici-language-course-expert.astro
+++ b/src/pages/services/cici-language-course-expert.astro
@@ -3,10 +3,12 @@ import Layout from "../../layouts/Layout.astro";
 import Hero from "../../components/pages/services/cici-language-course-expert/Hero.astro";
 import Who from "../../components/pages/services/cici-language-course-expert/Who.astro";
 import Goals from "../../components/pages/services/cici-language-course-expert/Goals.astro";
+import Programs from "../../components/pages/services/cici-language-course-expert/Programs.astro";
 ---
 
 <Layout title="Cici Language Course Expert">
     <Hero />
     <Who />
     <Goals />
+    <Programs />
 </Layout>
