--- a/src/components/pages/services/cici-language-course-expert/Programs.astro
+++ b/src/components/pages/services/cici-language-course-expert/Programs.astro
@@ -4,5 +4,95 @@ const toscaOrange = "/services/cici-language-course-expert/programs/tosca-orange
 ---
 
 <section class="relative w-full h-screen bg-cover bg-right bg-no-repeat overflow-hidden -mt-16 -z-1" style={`background-image: url(${background});`}>
+  <div class="container mx-auto max-w-7xl pt-32 h-full flex flex-col items-center justify-start">
+    <div class="mb-10">
+      <h2 class="text-5xl font-bold drop-shadow-lg font-mochiy-pop-one text-outline-red">PROGRAMS</h2>
+    </div>
 
+    <div class="flex gap-8 mb-16 px-8">
+      <div class="bg-white rounded-3xl p-2 w-55 shadow-2xl border-3 border-[#cb0d0d]">
+        <div class="bg-linear-to-b from-[#E24815] to-[#CB0D0D] rounded-t-2xl py-3 mb-6 font-mochiy-pop-one">
+          <h3 class="text-white font-medium text-base text-center">CLASS TYPE</h3>
+        </div>
+        <div class="space-y-4 ml-3 text-[#cb0d0d]">
+          <div>
+            <p class="font-bold text-lg">PRIVATE</p>
+            <p class="text-sm">(max 1 student)</p>
+          </div>
+          <div>
+            <p class="font-bold text-lg">SEMI PRIVATE</p>
+            <p class="text-sm">(max 3 students)</p>
+          </div>
+          <div>
+            <p class="font-bold text-lg">GROUP</p>
+            <p class="text-sm">(max 7-10 students)</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-3xl p-2 w-55 shadow-2xl border-3 border-[#cb0d0d]">
+        <div class="bg-linear-to-b from-[#E24815] to-[#CB0D0D] rounded-t-2xl py-3 mb-6 font-mochiy-pop-one">
+          <h3 class="text-white font-medium text-base text-center">CONCENTRATION</h3>
+        </div>
+        <div class="space-y-2 ml-3 text-[#cb0d0d]">
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">HSK Class</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Comprehensive Class</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Conversation Class</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Business Class</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Company Training</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Native Class</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Custom Class</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-3xl p-2 w-55 shadow-2xl border-3 border-[#cb0d0d]">
+        <div class="bg-linear-to-b from-[#E24815] to-[#CB0D0D] rounded-t-xl py-3 mb-6 font-mochiy-pop-one">
+          <h3 class="text-white font-medium text-base text-center">LEVEL</h3>
+        </div>
+        <div class="space-y-3 ml-3 text-[#cb0d0d]">
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Basic</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Beginner</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Intermediate</p>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-red">•</span>
+            <p class="text-sm font-medium">Advance</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="absolute -mt-110">
+      <img src={toscaOrange} alt="Tosca Orange" class="w-auto h-full" />
+    </div>
+  </div>
 </section>
