Add Benefits component to Cici Language Course Expert page

--- a/src/pages/services/cici-language-course-expert.astro
+++ b/src/pages/services/cici-language-course-expert.astro
@@ -4,11 +4,13 @@ import Hero from "../../components/pages/services/cici-language-course-expert/He
 import Who from "../../components/pages/services/cici-language-course-expert/Who.astro";
 import Goals from "../../components/pages/services/cici-language-course-expert/Goals.astro";
 import Programs from "../../components/pages/services/cici-language-course-expert/Programs.astro";
+import Benefits from "../../components/pages/services/cici-language-course-expert/Benefits.astro";
 ---
 
 <Layout title="Cici Language Course Expert">
-    <Hero />
-    <Who />
-    <Goals />
-    <Programs />
+  <Hero />
+  <Who />
+  <Goals />
+  <Programs />
+  <Benefits />
 </Layout>
