Add Roadmap component to Cici Language Course Expert page

--- a/src/pages/services/cici-language-course-expert.astro
+++ b/src/pages/services/cici-language-course-expert.astro
@@ -5,6 +5,7 @@ import Who from "../../components/pages/services/cici-language-course-expert/Who
 import Goals from "../../components/pages/services/cici-language-course-expert/Goals.astro";
 import Programs from "../../components/pages/services/cici-language-course-expert/Programs.astro";
 import Benefits from "../../components/pages/services/cici-language-course-expert/Benefits.astro";
+import Roadmap from "../../components/pages/services/cici-language-course-expert/Roadmap.astro";
 ---
 
 <Layout title="Cici Language Course Expert">
@@ -13,4 +14,5 @@ import Benefits from "../../components/pages/services/cici-language-course-exper
   <Goals />
   <Programs />
   <Benefits />
+  <Roadmap />
 </Layout>
