--- a/src/components/pages/services/cici-language-course-expert/Benefits.astro
+++ b/src/components/pages/services/cici-language-course-expert/Benefits.astro
@@ -5,8 +5,10 @@ const item2 = "/services/cici-language-course-expert/benefits/item-2.webp";
 const item3 = "/services/cici-language-course-expert/benefits/item-3.webp";
 ---
 
-<section class="relative w-full h-screen bg-cover bg-right bg-no-repeat overflow-hidden" style={`background-image: url(${background});`}>
-  <div class="container mx-auto max-w-7xl h-full flex flex-col items-center justify-start pt-20">
+<section class="relative w-full bg-right bg-no-repeat overflow-hidden -mt-5 -z-2">
+  <img src={background} alt="Benefits background" class="w-full h-auto block" />
+
+  <div class="absolute inset-0 container mx-auto max-w-7xl h-full flex flex-col items-center justify-start pt-20">
     <div class="mb-16">
       <h2 class="text-5xl font-bold drop-shadow-lg font-mochiy-pop-one text-outline-red">BENEFITS</h2>
     </div>
@@ -43,4 +45,6 @@ const item3 = "/services/cici-language-course-expert/benefits/item-3.webp";
       </div>
     </div>
   </div>
+
+  <div class="absolute inset-x-0 bottom-0 h-20 shadow-2xl pointer-events-none"></div>
 </section>
