--- a/src/components/pages/services/cici-language-course-expert/Programs.astro
+++ b/src/components/pages/services/cici-language-course-expert/Programs.astro
@@ -3,8 +3,10 @@ const background = "/services/cici-language-course-expert/programs/background.we
 const toscaOrange = "/services/cici-language-course-expert/programs/tosca-orange.svg";
 ---
 
-<section class="relative w-full h-screen bg-cover bg-right bg-no-repeat overflow-hidden -mt-6 -z-1" style={`background-image: url(${background});`}>
-  <div class="container mx-auto max-w-7xl pt-32 h-full flex flex-col items-center justify-start">
+<section class="relative w-full overflow-hidden -mt-6 -z-1">
+  <img src={background} alt="Programs background" class="w-full h-auto block" />
+
+  <div class="absolute inset-0 container mx-auto max-w-7xl pt-64 h-full flex flex-col items-center justify-start">
     <div class="mb-10">
       <h2 class="text-5xl font-bold drop-shadow-lg font-mochiy-pop-one text-outline-red">PROGRAMS</h2>
     </div>
