--- a/src/components/globals/Footer.astro
+++ b/src/components/globals/Footer.astro
@@ -12,22 +12,22 @@ const currentPath = Astro.url.pathname;
 		<div class="w-md h-16 md:h-24 -mt-3 md:-mt-7">
 			<div class="w-full h-2/3 flex justify-center items-center gap-1.5 md:gap-4">
 				<a href="/">
-					<img src="/footer/web.svg" alt="Web" class="w-6 h-6 md:w-12 md:h-12">
+					<img src="/web.svg" alt="Web" class="w-6 h-6 md:w-12 md:h-12">
 				</a>
 				<a href="https://www.instagram.com/cicimandarin.idn">
-					<img src="/footer/ig.svg" alt="Instagram" class="w-6 h-6 md:w-12 md:h-12">
+					<img src="/ig.svg" alt="Instagram" class="w-6 h-6 md:w-12 md:h-12">
 				</a>
 				<a href="https://wa.me/+6287853909383">
-					<img src="/footer/wa.svg" alt="WhatsApp" class="w-6 h-6 md:w-12 md:h-12">
+					<img src="/wa.svg" alt="WhatsApp" class="w-6 h-6 md:w-12 md:h-12">
 				</a>
 				<a href="https://www.tiktok.com/@cicimandarin.idn">
-					<img src="/footer/tiktok.svg" alt="TikTok" class="w-6 h-6 md:w-12 md:h-12">
+					<img src="/tiktok.svg" alt="TikTok" class="w-6 h-6 md:w-12 md:h-12">
 				</a>
 				<a href="https://www.linkedin.com/company/cici-mandarin-idn">
-					<img src="/footer/linked-in.svg" alt="LinkedIn" class="w-6 h-6 md:w-12 md:h-12">
+					<img src="/linked-in.svg" alt="LinkedIn" class="w-6 h-6 md:w-12 md:h-12">
 				</a>
 				<a href="mailto:info@cicimandarin.idn">
-					<img src="/footer/mail.svg" alt="Mail" class="w-6 h-6 md:w-12 md:h-12">
+					<img src="/mail.svg" alt="Mail" class="w-6 h-6 md:w-12 md:h-12">
 				</a>
 			</div>
 			<div class="-mt-1 md:mt-0 w-full font-bold text-[10px] md:text-base h-1/3 flex justify-center items-center gap-2 md:gap-6">
