--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title} - Cici Mandarin: Your All-in-One Gateway to China, Study, Travel, & Work</title>
 	</head>
-	<body class="w-screen h-screen">
+	<body class="w-screen h-screen max-w-[100vw] overflow-x-hidden">
 		<Navbar />
 
 		<slot />
