--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,14 @@ import Layout from "../layouts/Layout.astro";
 import Welcome from "../components/pages/landing-pages/Welcome.astro";
 import OurService from "../components/pages/landing-pages/OurService.astro";
 import AddItionalProServices from "../components/pages/landing-pages/AdditionalProServices.astro";
-import WhyUs from "../components/pages/landing-pages/WhyUs.astro";
+import WhyUs from "../components/pages/landing-pages/WhyUs.astro.tsx";
+import SuccesStories from "../components/pages/landing-pages/SuccesStories.astro.tsx";
 ---
 
 <Layout title="Home">
-    <Welcome />
-    <OurService />
-    <AddItionalProServices />
-    <WhyUs />
+  <Welcome />
+  <OurService />
+  <AddItionalProServices />
+  <WhyUs client:load />
+  <SuccesStories client:load />
 </Layout>
