Add Hero component to Cici Study Abroad Expert page

--- a/src/pages/services/cici-study-abroad-expert.astro
+++ b/src/pages/services/cici-study-abroad-expert.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Hero from "../../components/pages/services/cici-study-abroad-expert/Hero.astro";
 ---
 
 <Layout title="Cici Study Abroad Expert">
+  <Hero />
 </Layout>
