Add Services component and integrate Goals into Cici Study Abroad Expert page

--- a/src/pages/services/cici-study-abroad-expert.astro
+++ b/src/pages/services/cici-study-abroad-expert.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import Hero from "../../components/pages/services/cici-study-abroad-expert/Hero.astro";
+import Goals from "../../components/pages/services/cici-study-abroad-expert/Goals.astro";
+import Services from "../../components/pages/services/cici-study-abroad-expert/Services.astro";
 ---
 
 <Layout title="Cici Study Abroad Expert">
   <Hero />
+  <Goals />
+  <Services />
 </Layout>
