🔥feat: Add Hottest News section with new images and integrate into landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import AddItionalProServices from "../components/pages/landing-pages/AdditionalP
 import WhyUs from "../components/pages/landing-pages/WhyUs.astro.tsx";
 import SuccesStories from "../components/pages/landing-pages/SuccesStories.astro.tsx";
 import LearnCulture from "../components/pages/landing-pages/LearnCulture.astro.tsx";
+import HottestNews from "../components/pages/landing-pages/HottestNews.astro.tsx";
 ---
 
 <Layout title="Home">
@@ -15,4 +16,5 @@ import LearnCulture from "../components/pages/landing-pages/LearnCulture.astro.t
   <WhyUs client:load />
   <SuccesStories client:load />
   <LearnCulture />
+  <HottestNews />
 </Layout>
