--- a/src/pages/services/cici-tour-travel-expert.astro
+++ b/src/pages/services/cici-tour-travel-expert.astro
@@ -1,6 +1,18 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Hero from "../../components/pages/services/cici-tour-travel-expert/Hero.astro";
+import Goals from "../../components/pages/services/cici-tour-travel-expert/Goals.astro";
+import Services from "../../components/pages/services/cici-tour-travel-expert/Services.astro";
+import Benefits from "../../components/pages/services/cici-tour-travel-expert/Benefits.astro";
+import Roadmap from "../../components/pages/services/cici-tour-travel-expert/Roadmap.astro";
+import Explorer from "../../components/pages/services/cici-tour-travel-expert/Explorer.astro";
 ---
 
 <Layout title="Cici Tour Travel Expert">
+  <Hero />
+  <Goals />
+  <Services />
+  <Benefits />
+  <Roadmap />
+  <Explorer />
 </Layout>
