Add Cici Career Link Expert page with new assets including background images, SVG icons, and a Services component for improved user engagement and visual appeal.

--- a/src/pages/services/cici-career-link-expert.astro
+++ b/src/pages/services/cici-career-link-expert.astro
@@ -1,6 +1,10 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Hero from "../../components/pages/services/cici-career-link-expert/Hero.astro";
+import Services from "../../components/pages/services/cici-career-link-expert/Services.astro";
 ---
 
 <Layout title="Cici Career Link Expert">
+  <Hero />
+  <Services />
 </Layout>
