--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,10 @@
   color: #ffffff;
   paint-order: stroke fill;
 }
+
+.text-outline-orange {
+  -webkit-text-stroke: 12px #E14A25;
+  text-stroke: 10px #EE770E;
+  color: #ffffff;
+  paint-order: stroke fill;
+}
