--- a/src/components/pages/services/cici-career-link-expert/Hero.astro
+++ b/src/components/pages/services/cici-career-link-expert/Hero.astro
@@ -1,14 +1,14 @@
 ---
-const backgroundImage = "/services/cici-language-course-expert/hero/background.webp";
-const scrollImage = "/services/cici-language-course-expert/hero/scroll-paper.svg";
+const background = "/pages/services/cici-career-link-expert/hero/background.webp";
+const scrollImage = "/pages/services/cici-career-link-expert/hero/scroll-paper.svg";
 ---
 
-<section class="relative w-full h-screen bg-cover bg-center bg-no-repeat z-20" style={`background-image: url(${backgroundImage});`}>
+<section class="relative w-full h-screen bg-cover bg-center bg-no-repeat z-20" style={`background-image: url(${background});`}>
   <div class="absolute inset-x-0 bottom-0 h-32 bg-linear-to-t from-black/30 to-transparent pointer-events-none z-10"></div>
 
   <div class="mx-auto max-w-7xl px-6 py-16 md:py-24 flex flex-col items-end justify-center min-h-[70vh] relative z-20">
     <div class="relative w-full max-w-[880px] pt-20 transform translate-x-16 mt-16">
-      <h1 class="absolute top-12 left-1/2 -translate-x-1/2 z-10 w-full text-center font-mochiy-pop-one text-4xl leading-relaxed text-outline-red">
+      <h1 class="absolute top-12 left-1/2 -translate-x-1/2 z-10 w-full text-center font-mochiy-pop-one text-4xl leading-relaxed text-outline-orange">
         CICI CAREER
         <br class="hidden sm:block" />
         LINK EXPERT
@@ -19,9 +19,9 @@ const scrollImage = "/services/cici-language-course-expert/hero/scroll-paper.svg
 
         <div class="absolute inset-0 flex items-center justify-center px-10 sm:px-12 md:px-16 mx-40">
           <div class="text-center bg-white/0">
-            <h2 class="text-[#cb0d0d] font-bold text-sm sm:text-base md:text-lg">Build Your Future with Us:</h2>
-            <h3 class="text-[#cb0d0d] font-bold text-sm sm:text-base md:text-lg -mt-1">Your Gateway to Career Opportunities in China!</h3>
-            <p class="mt-3 text-[12px] sm:text-sm md:text-base text-[#cb0d0d] leading-relaxed">
+            <h2 class="text-[#934935] font-bold text-sm sm:text-base md:text-lg">Build Your Future with Us:</h2>
+            <h3 class="text-[#934935] font-bold text-sm sm:text-base md:text-lg -mt-1">Your Gateway to Career Opportunities in China!</h3>
+            <p class="mt-3 text-[12px] sm:text-sm md:text-base text-[#934935] leading-relaxed">
               At Cici Mandarin, we help you land the right job in China—internships, part-time, or full-time—across various industries. Get detailed listings with job info, company profiles, and city insights. Your dream career starts here!
             </p>
           </div>
